update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 desktop.ini
-# Untrack all files in assets/images/profile
+# Untrack all files
 assets/images/profile/*
 assets/images/posts/*
-# But keep default_profile.jpg
+# But keep defaults
 !assets/images/profile/default_profile.jpg
 !assets/images/posts/1762472166Aurora.jpg
